CM01_04/src/objects/RM_Milestone_Synergy_Management_History__c.object
<CustomObject>
    <fields>
        <fullName>RM_Acquisition_Method__c</fullName>
        <label>Acquisition Method</label>
        <picklist>
            <picklistValues>
                <fullName>1.Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Asset_Category_Detail__c</fullName>
        <label>Asset Category Detail</label>
        <picklist>
            <controllingField>RM_Asset_Category__c</controllingField>
            <picklistValues>
                <fullName>01.Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.Buildings - Plant/Distribution Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.Buildings - Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03.B&amp;A - Water Supply/Electrical Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03.B&amp;A - Air Conditioning Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03.B&amp;A - Partition/Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.Structures - Drain Ditch/Concrete Pavement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.Structures - Signboard/Asphalt Pavement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05.Machinery - Distribution Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05.Machinery - Beverage Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06.Sales Equipment - Can/Cup VM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07.Sales Equipment - Coolers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.Sales Equipment - Dispensers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09.Sales Equipment - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.IT Hardware - Server/PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Furniture - Desk/Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Furniture - Locker/Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Furniture - Refrigerator/Air Conditioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Furniture - Coin Counting Machine/Inspection Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.Fleet - Automobiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.Fleet - Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Fleet - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.IT Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.Other (Not Fixed Assets)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Asset_Category__c</fullName>
        <label>Asset Category</label>
        <picklist>
            <picklistValues>
                <fullName>01.Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.Buildings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03.Buildings &amp; Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04.Structures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05.Machinery &amp; Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06.Sales Equipment - Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07.Sales Equipment - Coolers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08.Sales Equipment - Dispensers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09.Sales Equipment - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10.IT Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.Furniture &amp; Fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12.Fleet - Automobiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.Fleet - Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14.Fleet - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.IT Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16.Other (Not Fixed Assets)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Asset_Name__c</fullName>
        <label>Asset Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Depreciation_Rule__c</fullName>
        <label>Depreciation Rule</label>
        <picklist>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New straight-line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>straight-line(5 years)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Detail__c</fullName>
        <label>Detail</label>
        <picklist>
            <picklistValues>
                <fullName>test1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>test2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Entity__c</fullName>
        <label>Entity</label>
        <picklist>
            <picklistValues>
                <fullName>test1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>test2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Four_Years_Later__c</fullName>
        <label>Four Years Later</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_Invest_Total__c</fullName>
        <formula>RM_This_Year__c +  RM_Next_Year__c + RM_The_Year_After_Next__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invest. Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Milestone_Synergy_Management_No__c</fullName>
        <displayFormat>MSMH-{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Milestone Synergy Management No</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RM_Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Next_Year_Formula__c</fullName>
        <formula>IF( OR(ISBLANK(RM_Next_Year__c) ,RM_Next_Year__c==0,RM_Next_Year__c == null),
RM_Next_Year_Q1__c + RM_Next_Year_Q2__c + RM_Next_Year_Q3__c + RM_Next_Year_Q4__c,
RM_Next_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Year(Formula)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Next_Year_Q1__c</fullName>
        <label>Next Year Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Next_Year_Q2__c</fullName>
        <label>Next Year Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Next_Year_Q3__c</fullName>
        <label>Next Year Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Next_Year_Text__c</fullName>
        <label>Next Year</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Next_Year__c</fullName>
        <label>Next Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_RFA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFA No.</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipLabel>Milestone Synergy Management History</relationshipLabel>
        <relationshipName>Milestone_Synergy_Management_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Saving_or_Spending__c</fullName>
        <label>Saving or Spending</label>
        <picklist>
            <picklistValues>
                <fullName>Saving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RM_The_Year_After_Next_Text__c</fullName>
        <label>he Year After Next</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_The_Year_After_Next__c</fullName>
        <label>The Year After Next</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_This_Year_Formula__c</fullName>
        <formula>IF(OR(ISBLANK(RM_This_Year__c),RM_This_Year__c==0,RM_This_Year__c == null),
RM_This_Year_Q1__c +  RM_This_Year_Q2__c +  RM_This_Year_Q3__c +  RM_This_Year_Q4__c,
RM_This_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>This Year(Formula)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_This_Year_Q1_Text__c</fullName>
        <label>This Year</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_This_Year_Q1__c</fullName>
        <label>This Year Q1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_This_Year_Q2_Text__c</fullName>
        <label>This Year</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_This_Year_Q2__c</fullName>
        <label>This Year Q2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_This_Year_Q3_Text__c</fullName>
        <label>This Year</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_This_Year_Q3__c</fullName>
        <label>This Year Q3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_This_Year_Text__c</fullName>
        <label>This Year</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_This_Year__c</fullName>
        <label>This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Three_Years_Later__c</fullName>
        <label>Three Years Later</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Total__c</fullName>
        <formula>RM_This_Year_Formula__c  +  RM_Next_Year_Formula__c + RM_The_Year_After_Next__c  +   RM_Three_Years_Later__c + RM_Four_Years_Later__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Useful_Life_Text__c</fullName>
        <label>Useful Life</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RM_Useful_Life__c</fullName>
        <label>Useful Life</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RM_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seq_No__c</fullName>
        <label>Seq No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Milestone Synergy Management History</label>
    <nameField>
        <displayFormat>Milestone-Synergy-{0000000000}</displayFormat>
        <label>Milestone Synergy Management History No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>